--- a/index.html
+++ b/index.html
@@ -1,64 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
+/* file: index.html */
+<DOCTYPE html>
+<html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/style.css">
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Tribute to Steve Jobs</title>
+<link rel="stylesheet" href="styles.css">
 </head>
+<div id="main" > 
+<h1 id="title">Dr. Norman Borlaug</h1>
+<p>The man who saved a billion lives</p>
+
+<div id="img-div">
+  <img id="image" elt="Dr. Norman Borlaug image" src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"/>
+
+  <figcaption id="img-caption">
+    "Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger."</figcaption>
+</div>
+
+<div id="tribute-info">
+<h3>Here's a time line of Dr. Borlaug's life:</h3>
+<ul>
+  <li><strong>1914 </strong> - Born in Cresco, Iowa</li>
+  <li><strong>1933 </strong>- Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
+  <li><strong>1935</strong>- Has to stop school and save up more money. Works in the Civilian Conservation Corps, helping starving Americans. "I saw how food changed them", he said. "All of this left scars on me."</li>
+  <li><strong>1937</strong>- Finishes university and takes a job in the US Forestry Service</li>
+  <li><strong>1938</strong>- Marries wife of 69 years Margret Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles Stakman, he returns to school study under Stakman, who teaches him about breeding pest-resistent plants.</li>
+  <li><strong>1941</strong>- Tries to enroll in the military after the Pearl Harbor attack, but is rejected. Instead, the military asked his lab to work on waterproof glue, DDT to control malaria, disinfectants, and other applied science.</li>
+  <li><strong>1942</strong>- Receives a Ph.D. in Genetics and Plant Pathology</li>
+  <li><strong>1944</strong>- Rejects a 100% salary increase from Dupont, leaves behind his pregnant wife, and flies to Mexico to head a new plant pathology program. Over the next 16 years, his team breeds 6,000 different strains of disease resistent wheat - including different varieties for each major climate on Earth.</li>
+  <li><strong>1945</strong>- Discovers a way to grown wheat twice each season, doubling wheat yields</li>
+  <li><strong>1953</strong>- crosses a short, sturdy dwarf breed of wheat with a high-yeidling American breed, creating a strain that responds well to fertilizer. It goes on to provide 95% of Mexico's wheat.</li>
+  <li><strong>1962</strong> - Visits Delhi and brings his high-yielding strains of wheat to the Indian subcontinent in time to help mitigate mass starvation due to a rapidly expanding population</li>
+  <li><strong>1970</strong>- receives the Nobel Peace Prize</li>
+  <li><strong>1983</strong>- helps seven African countries dramatically increase their maize and sorghum yields</li>
+  <li><strong>1984</strong>- becomes a distinguished professor at Texas A&M University</li>
+  <li><strong>2005</strong> - states "we will have to double the world food supply by 2050." Argues that genetically modified crops are the only way we can meet the demand, as we run out of arable land. Says that GM crops are not inherently dangerous because "we've been genetically modifying plants and animals for a long time. Long before we called it science, people were selecting the best breeds."</li>
+  <li><strong>2009</strong>- dies at the age of 95.</li>
+</ul>
+
+<i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</i> <br><br>
+<i>-- Indian Prime Minister Manmohan Singh</i>
+</div>
+
+<h5>
+If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug"> Wikipedia entry</>.
+</h5>
+</div>
 <body>
-	<main id="main">
-		<div id="heading" class="center">
-		<h1 id="title" class="center">Dr.Norman Borlaug</h1>
-		<p class="font"><i>The man who loved innovation</i></p>
-		</div>
-		<div id="img-div">
-			<img class="center" id=image src="images/Dr.Norman Borlaug.jpg" alt="Dr.Norman Borlaug with his Macintosh">
-			<div class="center"><br>
-			<p id="img-caption" class="font">Dr.Norman Borlaug in his 20's with early version of Macintosh</p><br>
-			</div>
-		</div>
-
-		<div id="tribute-info" class="center">
-			<h2 class="font">Here's a time-line of Dr.Norman Borlaug life:</h2>
-			<ul class="font" style="text-align: justify;">
-				<br>
-				<li><b>1914</b> - Dr.Norman Borlaug was born in March 25, 1914, in Cresco, Iowa and was adopted by Henry and Clara Borlaug. He grew up with one sister, Patty .</li>
-				<br>
-				<li><b>1932</b> - After graduating from high school in 1932, Jobs attended Reed College in Portland, Oregon, for two years. He dropped out after one semester to visit India and study eastern religions in the summer of 1932.</li>
-				<br>
-				<li><b>1935</b> - In 1935 Jobs joined a group known as the Homebrew Computer Club. One member, a technical whiz named Steve Wozniak, was trying to build a computer. Jobs and Wozniak attended meetings of the Homebrew Computer Club in 1935, which was a stepping stone to the development and marketing of the first Apple computer.</li>
-				<br>
-				<li><b>1936</b> - In 1936 he and Wozniak formed their own company. They called it Apple Computer Company, in memory of a happy summer Jobs had spent picking apples. They raised $1,300 in startup money by selling Jobs's microbus and Wozniak's calculator. At first they sold circuit boards (the boards that hold the internal components of a computer) while they worked on the computer prototype (sample).</li>
-				<br>
-				<li><b>1942</b> - In 1942 Apple introduced a revolutionary new model, the Macintosh. The on-screen display had small pictures called icons. To use the computer, the user pointed at an icon and clicked a button using a new device called a mouse. This process made the Macintosh very easy to use. The Macintosh did not sell well to businesses, however. It lacked features other personal computers had, such as a corresponding high quality printer.</li>
-				<br>
-				<li><b>1943</b> - The failure of the Macintosh signaled the beginning of Jobs's downfall at Apple. Jobs resigned in 1943 from the company he had helped found, though he retained his title as chairman of its board of directors.</li>
-				<br>
-				<li><b>1944</b> - Jobs soon hired some of his former employees to begin a new computer company called NeXT. Late in 1944 the NeXT computer was introduced at a large gala event in San Francisco, aimed at the educational market. Initial reactions were generally good. The product was very user-friendly, and had a fast processing speed, excellent graphics displays, and an outstanding sound system. Despite the warm reception, however, the NeXT machine never caught on. It was too costly, had a black-and-white screen, and could not be linked to other computers or run common software.</li>
-				<br>
-				<li><b>1946</b> - NeXT was not, however, the end of Steve Jobs. In 1946 Jobs purchased a small company called Pixar from filmmaker George Lucas (1946–). Pixar specialized in computer animation. Nine years later Pixar released Toy Story, a huge box office hit. Pixar later went on to make Toy Story 2 and A Bug's Life, which Disney distributed, and Monsters, Inc. All these films have been extremely successful. Monsters, Inc. had the largest opening weekend ticket sales of any animated film in history.</li>
-				<br>
-				<li><b>1956</b> - In a February 1956 Time magazine article, Jobs said, "The thing that drives me and my colleagues … is that you see something very compelling to you, and you don't quite know how to get it, but you know, sometimes intuitively, it's within your grasp. And it's worth putting in years of your life to make it come into existence." Jobs has worked hard to translate his ideas into exciting and innovative products for businesses and consumers. He was instrumental in launching the age of the personal computer. Steve Jobs is truly a computer industry visionary. <br>In December of 1956 Apple purchased NeXT Software for over $400 million. Jobs returned to Apple as a part-time consultant to the chief executive officer (CEO). The following year, in a surprising event, Apple entered into a partnership with its competitor Microsoft. The two companies, according to the New York Times, "agreed to cooperate on several sales and technology fronts." Over the next six years Apple introduced several new products and marketing strategies.</li>
-				<br>
-				<li><b>1957</b> - In November 1957 Jobs announced Apple would sell computers directly to users over the Internet and by telephone. The Apple Store became a runaway success. Within a week it was the third-largest e-commerce site on the Internet. In September of 1957 Jobs was named interim CEO of Apple.<br>
-					In 1958 Jobs announced the release of the iMac, which featured powerful computing at an affordable price. The iBook was unveiled in July 1969. This is a clam-shaped laptop that is available in bright colors. It includes Apple's AirPort, a computer version of the cordless phone that would allow the user to surf the Internet wirelessly. In January 1978 Jobs unveiled Apple's new Internet strategy. It included a group of Macintosh-only Internet-based applications. Jobs also announced that he was becoming the permanent CEO of Apple.</li>
-				<br>
-				
-			</ul>
-		</div>
-
-		<div class="center">
-			<p class="font"><i>I was lucky to get into computers when it was a very young and idealistic industry. There weren't many degrees offered in computer science, so people in computers were brilliant people from mathematics, physics, music, zoology, whatever. They loved it, and no one was really in it for the money... There are people around here who start companies just to make money, but the great companies, well, that's not what they're about."</i>
-				—Dr.Norman Borlaug</p>
-				<br>
-			<h3 class="font">You can learn more about this incredible man on
-				<a href="https://en.wikipedia.org/wiki/Dr.Norman Borlaug" id="tribute-link" target="_blank">
-				Wikipedia.</a>
-			</h3>
-		</div>
-
-	</main>
-	<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
