--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <link rel="stylesheet" href="styles.css">
 </head>
-<div id="main" > 
+<main id="main" > 
 <h1 id="title">Dr. Norman Borlaug</h1>
 <p>The man who saved a billion lives</p>
 
